--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,3 +1,18 @@
+.create-a-candidate {
+  border: 2px solid #000000;
+  text-align: center;
+  width: 40%;
+  margin: 0 auto; }
+  .create-a-candidate h2 {
+    font-size: 2em; }
+  .create-a-candidate .createCandidate {
+    border: 2px solid #000000;
+    width: 40%;
+    margin: 0 auto;
+    text-align: left;
+    padding-left: 7em;
+    margin-bottom: 3em; }
+
 /* What do we put in here? */
 
 /*# sourceMappingURL=style.css.map */
