starting sass to create candidate section

--- a/client/scss/_create-a-candidate.scss
+++ b/client/scss/_create-a-candidate.scss
@@ -1,17 +1,25 @@
 .create-a-candidate{
   border: 2px solid #000000;
   text-align: center;
-  width: 40%;
+  width: 50%;
   margin: 0 auto;
+  clear: both;
   h2 {
     font-size: 2em;
   }
   .createCandidate {
-    border: 2px solid #000000;
+    border: 1px solid #000000;
     width: 40%;
     margin: 0 auto;
     text-align: left;
-    padding-left: 7em;
+    padding-left: 1em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
     margin-bottom: 3em;
+
+    aside{
+      margin-top: 0.5em;
+      margin-bottom: 0.5em;
+    }
   }
 }
