--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,4 +1,6 @@
-@import '_variable';
-@import '_create-a-candidate';
+@import 'normalize';
+@import 'variable';
+@import 'header';
+@import 'create-a-candidate';
 
 /* What do we put in here? */
