--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -415,19 +415,36 @@ nav ul {
     text-align: center;
     width: 25%;
     border: 1px solid #000000;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    padding: 0.3em 0; }
+    nav ul li a {
+      text-decoration: none;
+      color: #000000; }
+    nav ul li a:hover {
+      color: #ffffff; }
+  nav ul li:hover {
+    background-color: #000000; }
+
+header::after {
+  content: '';
+  display: block;
+  height: 15px;
+  width: 100%; }
 
 .create-a-candidate {
   border: 2px solid #000000;
   text-align: center;
-  width: 50%;
+  width: 45%;
+  min-width: 380px;
   margin: 0 auto;
+  margin-top: 2em;
   clear: both; }
   .create-a-candidate h2 {
     font-size: 2em; }
   .create-a-candidate .createCandidate {
     border: 1px solid #000000;
     width: 40%;
+    min-width: 190px;
     margin: 0 auto;
     text-align: left;
     padding-left: 1em;
@@ -437,6 +454,21 @@ nav ul {
     .create-a-candidate .createCandidate aside {
       margin-top: 0.5em;
       margin-bottom: 0.5em; }
+
+.create-a-campaign {
+  margin: 0 auto;
+  width: 100%; }
+  .create-a-campaign h2 {
+    text-align: center; }
+  .create-a-campaign .campaignStart {
+    width: 40%;
+    margin: 0 auto;
+    text-align: center;
+    max-width: 300px; }
+    .create-a-campaign .campaignStart select {
+      margin: 0.5em 0; }
+    .create-a-campaign .campaignStart input[type=submit] {
+      margin: 0.5em 0; }
 
 /* What do we put in here? */
 
