--- a/client/scss/_header.scss
+++ b/client/scss/_header.scss
@@ -10,9 +10,27 @@ nav {
       display: block;
       float: left;
       text-align: center;
-      width: 25%;
+      width: $headerLIwidth;
       border: 1px solid #000000;
       box-sizing: border-box;
+      padding: 0.3em 0;
+      a {
+      text-decoration: none;
+      color: #000000;
+      }
+      a:hover {
+        color: #ffffff;
+      }
+    }
+    li:hover {
+      background-color: #000000;
     }
   }
+}
+header::after {
+  content: '';
+  display: block;
+  height: 15px;
+  width: 100%;
+
 }
