styling for application on all pages, frame built, need to change coloring

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -3,5 +3,7 @@
 @import 'header';
 @import 'create-a-candidate';
 @import 'createCampaign';
+@import 'list_of_candidates';
+@import 'updateCandidate';
 
 /* What do we put in here? */
