--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -423,7 +423,8 @@ nav ul {
     nav ul li a:hover {
       color: #ffffff; }
   nav ul li:hover {
-    background-color: #000000; }
+    background-color: #000000;
+    color: #ffffff; }
 
 header::after {
   content: '';
@@ -437,7 +438,7 @@ header::after {
   width: 45%;
   min-width: 380px;
   margin: 0 auto;
-  margin-top: 2em;
+  margin-top: 5em;
   clear: both; }
   .create-a-candidate h2 {
     font-size: 2em; }
@@ -457,6 +458,7 @@ header::after {
 
 .create-a-campaign {
   margin: 0 auto;
+  margin-top: 5em;
   width: 100%; }
   .create-a-campaign h2 {
     text-align: center; }
@@ -464,11 +466,67 @@ header::after {
     width: 40%;
     margin: 0 auto;
     text-align: center;
-    max-width: 300px; }
+    max-width: 300px;
+    border: 2px solid #000000;
+    padding: 2em; }
     .create-a-campaign .campaignStart select {
       margin: 0.5em 0; }
     .create-a-campaign .campaignStart input[type=submit] {
       margin: 0.5em 0; }
+  .create-a-campaign p {
+    text-align: center;
+    font-size: 3rem; }
+
+.list-of-candidates {
+  margin: 0 auto;
+  width: 80%; }
+  .list-of-candidates h2 {
+    text-align: center;
+    margin-top: 3em; }
+  .list-of-candidates ul {
+    list-style: none;
+    margin: 0 auto;
+    width: 90%; }
+    .list-of-candidates ul li {
+      clear: both;
+      max-width: 550px;
+      min-width: 540px;
+      border: 2px solid #000000;
+      margin-bottom: 1em;
+      padding-left: 50px; }
+      .list-of-candidates ul li img {
+        height: 100px;
+        margin-right: 0.3em;
+        display: block;
+        float: left;
+        margin-top: 1em; }
+      .list-of-candidates ul li button {
+        margin: 0 0.3em;
+        margin-top: 10%; }
+    .list-of-candidates ul li::after {
+      content: '';
+      display: block;
+      height: 50px;
+      width: 100%; }
+
+.updateAttributes {
+  margin: 0 auto;
+  width: 50%; }
+  .updateAttributes h4 {
+    text-align: center; }
+  .updateAttributes .update-attribute {
+    border: 1px solid #000000;
+    width: 70%;
+    min-width: 190px;
+    margin: 0 auto;
+    text-align: left;
+    padding-left: 1em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    margin-bottom: 3em; }
+    .updateAttributes .update-attribute aside {
+      margin-top: 0.5em;
+      margin-bottom: 0.5em; }
 
 /* What do we put in here? */
 
