--- a/client/scss/_createCampaign.scss
+++ b/client/scss/_createCampaign.scss
@@ -1,5 +1,6 @@
 .create-a-campaign {
   margin: 0 auto;
+  margin-top: 5em;
   width: 100%;
   h2 {
     text-align: center;
@@ -9,11 +10,17 @@
     margin: 0 auto;
     text-align: center;
     max-width: $campaignFormMaxWidth;
+    border: 2px solid #000000;
+    padding: 2em;
     select {
       margin: 0.5em 0;
     }
     input[type=submit] {
       margin: 0.5em 0;
     }
+  }
+  p {
+    text-align: center;
+    font-size: 3rem;
   }
 }
