--- a/client/scss/_variable.scss
+++ b/client/scss/_variable.scss
@@ -4,7 +4,7 @@
 
 $candidateSectionWidth: 45%;
 $candidateSectionMinWidth: 380px;
-$candidateSectionMarginTop: 2em;
+$candidateSectionMarginTop: 5em;
 
 $createFormWidth: 40%;
 $createFormMinWidth: 190px;
@@ -19,3 +19,12 @@ $headerLIwidth: 25%;
 
 $campaignFormWidth: 40%;
 $campaignFormMaxWidth: 300px;
+
+$updateFormWidth: 70%;
+$updateFormMinWidth: 190px;
+$updateFormPadLeft: 1em;
+$updateFormPadTop: 0.5em;
+$updateFormPadBot: 0.5em;
+$updateFormMargBot: 3em;
+$updateFormAsideMargTop: 0.5em;
+$updateFormAsideMargBot: 0.5em;
