--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -3,7 +3,9 @@
 @import 'header';
 @import 'create-a-candidate';
 @import 'createCampaign';
+@import 'campaign_list';
 @import 'list_of_candidates';
 @import 'updateCandidate';
+
 
 /* What do we put in here? */
